--- a/action.yml
+++ b/action.yml
@@ -10,10 +10,9 @@ inputs:
     default: '1.11.0'
 runs:
   using: "composite"
-  steps: 
-    - run: wget https://github.com/Southclaws/sampctl/releases/download/${{ inputs.version }}/sampctl_${{ inputs.version }}_linux_amd64.tar.gz -O sampctl.tar.gz
-      shell: bash
-    - run: sudo tar -zxf sampctl.tar.gz --directory /usr/bin sampctl
-      shell: bash
-    - run: sudo chmod +x /usr/bin/sampctl
-      shell: bash
+  steps:
+    - shell: pwsh
+      run: |
+        Invoke-WebRequest -Uri "https://github.com/Southclaws/sampctl/releases/download/${{ inputs.version }}/sampctl_${{ inputs.version }}_windows_amd64.zip" -OutFile "sampctl.zip"
+        Expand-Archive -Path "sampctl.zip" -DestinationPath "$env:USERPROFILE\sampctl"
+        $env:Path += ";$env:USERPROFILE\sampctl"
